--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 	<main>
 		<section>
 			<h2>Section 1</h2>
-			<p>love and happiness.</p>
+			<p> simple html</p>
 		</section>
 		<section>
 			<h2>Section 2</h2>
-			<p>Sed ultricies mauris nec vestibulum imperdiet. Nulla ac enim arcu. Maecenas rhoncus ante vel quam commodo luctus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
+			<p>capstone pipeline.</p>
 		</section>
 	</main>
 
